--- a/bin/main/static/index.html
+++ b/bin/main/static/index.html
@@ -7,34 +7,34 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-color: #f4f4f4;
         }
         .container {
             background: white;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            max-width: 400px;
         }
         h1 {
-            font-size: 22px;
+            color: #333;
             margin-bottom: 20px;
         }
         button {
+            padding: 12px 24px;
+            font-size: 18px;
             background-color: #007BFF;
             color: white;
             border: none;
-            padding: 12px 20px;
-            font-size: 16px;
             border-radius: 5px;
             cursor: pointer;
-            transition: background 0.3s ease;
+            transition: background 0.3s;
         }
         button:hover {
             background-color: #0056b3;
@@ -50,36 +50,51 @@
         .invalid {
             color: red;
         }
+        .loader {
+            display: none;
+            margin-top: 10px;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #007BFF;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>GitHub Connection Tester</h1>
+        <h1>GitHub PAT Authentication</h1>
         <button onclick="authenticate()">Authenticate</button>
+        <div class="loader" id="loader"></div>
         <p id="result"></p>
     </div>
 
     <script>
         function authenticate() {
-            const resultElement = document.getElementById('result');
-            resultElement.textContent = "Authenticating...";
-            resultElement.className = "";
-
-            fetch('/authenticate', { method: '{GET}' })
-                .then(response => response.json())
+            const result = document.getElementById('result');
+            const loader = document.getElementById('loader');
+            
+            result.textContent = "";
+            loader.style.display = "block";
+            
+            fetch('/authenticate', { method: 'POST' })
+                .then(response => response.text())
                 .then(data => {
-                    if (data.error) {
-                        resultElement.textContent = "Invalid PAT: " + data.error;
-                        resultElement.className = "invalid";
-                    } else {
-                        resultElement.textContent = `Authenticated as: ${data.login}`;
-                        resultElement.className = "valid";
-                    }
+                    loader.style.display = "none";
+                    result.textContent = data;
+                    result.className = data.includes('valid') ? 'valid' : 'invalid';
                 })
                 .catch(error => {
-                    resultElement.textContent = "Error: " + error.message;
-                    resultElement.className = "invalid";
+                    loader.style.display = "none";
+                    result.textContent = "Error occurred. Please try again.";
+                    result.className = "invalid";
+                    console.error('Error:', error);
                 });
         }
     </script>
